--- a/Ventanas/Menu.xaml
+++ b/Ventanas/Menu.xaml
@@ -25,17 +25,12 @@
                 <SolidColorBrush Color="#FF04C4DC" Opacity="0.5"/>
             </Button.Background>
         </Button>
-        <Button Content="LOGROS" HorizontalAlignment="Left" Margin="1,444,0,0" VerticalAlignment="Top" Width="248" Height="50" FontFamily="Calibri Light" FontSize="36" FontWeight="Bold" BorderBrush="White" Foreground="White">
+        <Button x:Name="AcercaDeButton" Content="ACERCA DE" HorizontalAlignment="Left" Margin="1,446,0,0" VerticalAlignment="Top" Width="248" Height="50" FontFamily="Calibri Light" FontSize="36" FontWeight="Bold" BorderBrush="White" Foreground="White" Click="AcercaDeButton_Click">
             <Button.Background>
                 <SolidColorBrush Color="#FF04C4DC" Opacity="0.5"/>
             </Button.Background>
         </Button>
-        <Button x:Name="buttonAcercaDe" Content="ACERCA DE" HorizontalAlignment="Left" Margin="1,502,0,0" VerticalAlignment="Top" Width="248" Height="50" FontFamily="Calibri Light" FontSize="36" FontWeight="Bold" BorderBrush="White" Foreground="White">
-            <Button.Background>
-                <SolidColorBrush Color="#FF04C4DC" Opacity="0.5"/>
-            </Button.Background>
-        </Button>
-        <Button x:Name="SalirButton" Content="SALIR" HorizontalAlignment="Left" Margin="1,561,0,0" VerticalAlignment="Top" Width="248" Height="50" FontFamily="Calibri Light" FontSize="36" FontWeight="Bold" BorderBrush="White" Foreground="White" Click="SalirButton_Click">
+        <Button x:Name="SalirButton" Content="SALIR" HorizontalAlignment="Left" Margin="1,505,0,0" VerticalAlignment="Top" Width="248" Height="50" FontFamily="Calibri Light" FontSize="36" FontWeight="Bold" BorderBrush="White" Foreground="White" Click="SalirButton_Click">
             <Button.Background>
                 <SolidColorBrush Color="#FF04C4DC" Opacity="0.5"/>
             </Button.Background>
